--- a/modulo_2/aula2/array.html
+++ b/modulo_2/aula2/array.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trabalhando com Arrays - Parte 1</title>
+    <title>Trabalhando com Arrays</title>
 </head>
 <body>
-    <h1>Trabalhando com Arrays - Parte 1</h1>
+    <h1>Trabalhando com Arrays</h1>
     <script src="./array.js"></script>
     
 </body>
