--- a/modulo_2/aula3/consultorio.html
+++ b/modulo_2/aula3/consultorio.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fila de Espera</title>
 </head>
 <body>
-    
+    <h1>Fila de Espera</h1>
+    <script src="./consultorio.js"></script>
 </body>
 </html>
